--- a/PhtshopTemplate/index.html
+++ b/PhtshopTemplate/index.html
@@ -21,8 +21,16 @@
     <!-- Начало основного кода -->
 
     <header> 
-            <div class="container">
-                    <h1 class="text-center">Hello</h1>
+            <div class="dd-container">
+                    <a href="stylesheets/style.css" class="logo">Logo</a>
+                    <nav>
+                        <ul>
+                            <li><a href="">"Label"</a></li>
+                            <li><a href="">"Label"</a></li>
+                            <li><a href="">"Label"</a></li>
+                            <li><a href="">"Sign in"</a></li>
+                        </ul>
+                    </nav>
             </div>
         </header>
 
