fix with master opinion

--- a/PhtshopTemplate/index.html
+++ b/PhtshopTemplate/index.html
@@ -66,18 +66,18 @@
 
     <section class="section-light">
         <div class="row">
-            <div class="col 3">
-                <img src="../images/naruto.jpg" alt="">
+            <div class="col-3">
+                <img src="images/naruto.jpg" alt="">
                 <h2>Naruto</h2>
                 <p>7th Hokage</p>
             </div>
-            <div class="col 3">
-                <img src="../images/sasuke.jpg" alt="">
+            <div class="col-3">
+                <img src="images/sasuke.jpg" alt="">
                  <h2>Sasuke</h2>
                  <p>Shadow Hokage</p>
             </div>
-            <div class="col 3">
-                <img src="../images/sakura.jpg" alt="">
+            <div class="col-3">
+                <img src="images/sakura.jpg" alt="">
                  <h2>Sakura</h2>
                  <p>Balast and ugly of the team</p>
         </div>
