--- a/Flexbox-Float-Bootstrap/index.html
+++ b/Flexbox-Float-Bootstrap/index.html
@@ -66,41 +66,23 @@
 
     </header>
 
-    <section class="section-light">
-        <div class="container">
-            <div class="row">
-                <!-- Добавил свой класс quotes - пусть здесь будут цитаты великих людей -->
-                <div class="col quotes">
-                    <h2>Заголовок</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam provident nemo cum
-                        hic aperiam voluptas in sunt neque possimus repellendus odit voluptate consequatur sint id quam
-                        maiores quis delectus qui, reiciendis iste commodi magni? Sequi autem blanditiis expedita magni
-                        minus dolores commodi. Expedita repudiandae at quia. Laborum corporis dicta obcaecati iusto
-                        itaque minima doloribus voluptates nihil temporibus veritatis iure rerum, quae reprehenderit
-                        praesentium quidem eveniet dolore, accusantium earum delectus.</p>
-                </div>
-                <div class="col quotes">
-                    <h2>Заголовок</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, at necessitatibus
-                        voluptas eveniet dolores dicta quos, totam voluptatem vitae sit sint cupiditate magni
-                        exercitationem rerum expedita. Odit eligendi id atque dolore blanditiis eum tempore corrupti
-                        maiores! Dignissimos ratione quasi, nisi culpa explicabo dolorum consequuntur atque minus quas
-                        repellendus iste, libero ex iusto voluptatum nulla quam. Voluptatibus optio minus alias quidem
-                        quaerat hic dolor, voluptates nobis, dolorum laboriosam, sit expedita ipsam.</p>
-                </div>
 
-                <div class="col quotes">
-                    <h2>Заголовок</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi quidem nostrum placeat fuga
-                        omnis, saepe facilis incidunt commodi in sequi neque architecto officia cupiditate harum
-                        eligendi voluptatum? Neque doloremque ad excepturi tempore dolor quae similique officiis earum
-                        minima, illo sit vitae voluptas nemo! Accusantium assumenda ad et, doloremque repellat facilis
-                        dicta illum provident aliquam placeat dignissimos quas? Dicta autem et reiciendis veniam
-                        fugiat, nam, eligendi repellendus nulla nemo iure sunt.</p>
-                </div>
-            </div>
+    <div class="container-dd">
+        <div class="row">
+            <div class="col-12">Column 1</div>
+            <div class="col-sm-4">Column 2</div>
+            <div class="col-sm-4">Column 3</div>
+            <div class="col-sm-4">Column 4</div>
+            <div class="col-sm-4">Column 5</div>
+            <div class="col-sm-4">Column 6</div>
+            <div class="col-sm-4">Column 7</div>
+            <div class="col-sm-4">Column 8</div>
+            <div class="col-sm-4">Column 9</div>
+            <div class="col-sm-4">Column 10</div>
+            <div class="col-12">Column 11</div>
         </div>
-    </section>
+    </div>
+    
 
     <footer class="footer">
         <div class="container">
