--- a/Flexbox-Float-Bootstrap/index.html
+++ b/Flexbox-Float-Bootstrap/index.html
@@ -8,64 +8,12 @@
     <title>Шаблон</title>
 
     <!-- Подключение стилей и шрифтов -->
-    <!-- Например, Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <!-- Например, шрифт Roboto Condensed -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-
-    <!-- Подключение своих стилей -->
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body>
-
-    <!-- Начало основного кода -->
-
-    <header class="header">
-        <!-- html5 <nav> с классом бустрапа navbar и своим классом header-navbar -->
-        <nav class="navbar header-navbar">
-            <!-- Почему контейнер внутри блок nav? -->
-            <!-- Потому что navbar (его фон) должен растянуться на всю ширину страницы, а содержимое должно быть адаптивным -->
-            <div class="container">
-                <!-- Такой вариант предлагает сам бутстрап на своем сайте, класс бутстрапа navbar-brand -->
-                <a class="navbar-brand" href="#">LOGO</a>
-
-                <!-- Ненумерованный список <ul> с классом бутстрапа nav, который изменяет его до неузнаваемости -->
-                <!-- С ml-auto все понятно -  margin-left: auto, что значит отступить слева на максимальную длину -->
-                <ul class="nav ml-auto">
-                    <!-- У каждого элемента <li> есть класс бутстрапа nav-item, который опять-таки меняет его вид -->
-                    <!-- А у этого еще класс бутстрапа active, который говорит, что на этой странице сейчас открыт сайт -->
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Товары</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Контакты</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- Здесь блок div.container заканчивается -->
-        </nav>
-        <!-- Здесь блок <nav> заканчивается -->
-
-        <!-- В этом блоке будет лого сайта с картинкой -->
-        <div class="header-logo">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1>Простой лендинг</h1>
-                        <!-- Блок <p> - абзац с текстом -->
-                        <p>Пример обычного одностраничного сайта</p>
-                    </div>
-                </div>
-            </div>
-            <!-- div.container заканчивается -->
-        </div>
-
-    </header>
-
 
     <div class="container-dd">
         <div class="row">
@@ -82,27 +30,11 @@
             <div class="col-12">Column 11</div>
         </div>
     </div>
-    
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <!-- Специальный способ записи unicode символов &copy; - знак копирайта -->
-                <div class="col">&copy; 2019</div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Конец основного кода -->
-
-    <!-- Подключение внешних скриптов -->
-    <!-- Например, JQuery -->
+    <!-- Подключение скриптов -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <!-- Например, Bootstrap.js и необъодимый для его работы Popper.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-
-    <!-- Подключение своих скриптов -->
     <script src="scripts/app.js"></script>
 </body>
 
