--- a/Flexbox-Float-Bootstrap/index.html
+++ b/Flexbox-Float-Bootstrap/index.html
@@ -17,7 +17,7 @@
 
     <div class="container-dd">
         <div class="row">
-            <div class="col-12">Column 1</div>
+            <div class="col-12 dt">Column 1</div>
             <div class="col-sm-4">Column 2</div>
             <div class="col-sm-4">Column 3</div>
             <div class="col-sm-4">Column 4</div>
@@ -27,7 +27,7 @@
             <div class="col-sm-4">Column 8</div>
             <div class="col-sm-4">Column 9</div>
             <div class="col-sm-4">Column 10</div>
-            <div class="col-12">Column 11</div>
+            <div class="col-12 bb">Column 11</div>
         </div>
     </div>
 
