--- a/Flexbox-Float-Bootstrap/index.html
+++ b/Flexbox-Float-Bootstrap/index.html
@@ -15,20 +15,18 @@
 
 <body>
 
-    <div class="container-dd">
-        <div class="row">
-            <div class="col-12 dt">Column 1</div>
-            <div class="col-sm-4">Column 2</div>
-            <div class="col-sm-4">Column 3</div>
-            <div class="col-sm-4">Column 4</div>
-            <div class="col-sm-4">Column 5</div>
-            <div class="col-sm-4">Column 6</div>
-            <div class="col-sm-4">Column 7</div>
-            <div class="col-sm-4">Column 8</div>
-            <div class="col-sm-4">Column 9</div>
-            <div class="col-sm-4">Column 10</div>
-            <div class="col-12 bb">Column 11</div>
-        </div>
+    <div class="row justify-content-center">
+        <div class="col-12">Column 1</div>
+        <div class="col-4">Column 2</div>
+        <div class="col-4">Column 3</div>
+        <div class="col-4">Column 4</div>
+        <div class="col-4">Column 5</div>
+        <div class="col-4">Column 6</div>
+        <div class="col-4">Column 7</div>
+        <div class="col-4">Column 8</div>
+        <div class="col-4">Column 9</div>
+        <div class="col-4">Column 10</div>
+        <div class="col-12">Column 11</div>
     </div>
 
     <!-- Подключение скриптов -->
