--- a/FlexboxGrid/index.html
+++ b/FlexboxGrid/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="row justify-content-center">
+    <div class="flex-container">
         <div class="col-12">Column 1</div>
         <div class="col-4">Column 2</div>
         <div class="col-4">Column 3</div>
