--- a/FlexboxGrid/index.html
+++ b/FlexboxGrid/index.html
@@ -15,7 +15,21 @@
 
 <body>
 
-    <div class="flex-container">
+    <div class="flex-container-1">
+        <div class="flex-header">1</div>
+        <div class="flex-cell">2</div>
+        <div class="flex-cell">3</div>
+        <div class="flex-cell">4</div>
+        <div class="flex-cell">5</div>
+        <div class="flex-cell">6</div>
+        <div class="flex-cell">7</div>
+        <div class="flex-cell">8</div>
+        <div class="flex-cell">9</div>
+        <div class="flex-cell">10</div>
+        <div class="flex-footer">11</div>
+    </div>
+
+    <!-- <div class="flex-container">
         <div class="col-12">Column 1</div>
         <div class="col-4">Column 2</div>
         <div class="col-4">Column 3</div>
@@ -27,7 +41,7 @@
         <div class="col-4">Column 9</div>
         <div class="col-4">Column 10</div>
         <div class="col-12">Column 11</div>
-    </div>
+    </div> -->
 
     <!-- Подключение скриптов -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
