--- a/FlexboxGrid/index.html
+++ b/FlexboxGrid/index.html
@@ -29,7 +29,7 @@
         <div class="flex-footer">11</div>
     </div>
 
-    <!-- <div class="flex-container">
+    <div class="flex-container">
         <div class="col-12">Column 1</div>
         <div class="col-4">Column 2</div>
         <div class="col-4">Column 3</div>
@@ -41,7 +41,7 @@
         <div class="col-4">Column 9</div>
         <div class="col-4">Column 10</div>
         <div class="col-12">Column 11</div>
-    </div> -->
+    </div> 
 
     <!-- Подключение скриптов -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
