first markup detailed fix

--- a/PhtshopTemplate/index.html
+++ b/PhtshopTemplate/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar header-navbar">
             <div class="container">
                 <a class="navbar-brand" href="#">LOGO</a>
-                <ul class="nav ml-auto dd-lbl">
+                <ul class="nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Label</a>
                     </li>
@@ -34,26 +34,24 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Label</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="btn btn-primary dd-btn">"Sign in"</a>
-                    </li>
                 </ul>
+                <a href="#" class="button">Sign in</a>
             </div>
         </nav>
+    </header>
 
-        <div class="header-logo">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1>*Our Mission*</h1>
-                        <p>Long text under Our Mission bla-bla text ever since the 1500.</p>
-                    </div>
+    <header class="header-logo">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1><span>★</span> Our Mission <span>★</span></h1>
+                    <p>Long text under Our Mission bla-bla text ever since the 1500.</p>
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="section-dv">
+    <section class="section-about">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -65,13 +63,9 @@
         </div>
     </section>
 
-    <section class="section-map">
-        <iframe class="google" src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606"></iframe>
-    </section>
-
-    <section class="section-light">
-        <h1>Team</h1>
+    <section class="section-team">
         <div class="container">
+            <h1>Team</h1>
             <div class="row">
                 <div class="col">
                     <img src="images/naruto.jpg" alt="">
@@ -89,6 +83,13 @@
                     <p>Balast and ugly of the team</p>
                 </div>
             </div>
+            <button class="sennen-button">Sennen Goroshi</button>
+            <!-- Не забывай закрывать дивы! -->
+        </div>
+    </section>
+
+    <section class="section-map">
+        <iframe class="google" src="https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2schicago+theatre!5e0!3m2!1sen!2sus!4v1388701393606"></iframe>
     </section>
 
     <footer class="footer">
