--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Шаблон</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Montserrat|Noto+Sans" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="header-logo">
-            <nav class="navbar header-navbar">
-                <div class="container-nav">
+            <div class="container-nav">
+                <nav class="navbar header-navbar">
                     <a class="navbar-brand" href="#">Dreams</a>
                         <ul class="nav ml-auto">
                             <li class="nav-item active">
@@ -34,8 +34,9 @@
                                 <a class="nav-link" href="#">CONTACT</a>
                             </li>
                         </ul>
-                </div>
-            </nav>
+                </nav>
+            </div>
+            
                 <div class="container-logo">
                     <div class="row">
                         <div class="col">
