--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -50,7 +50,7 @@
         </div>
     </header>
 
-    <section class="section-light">
+    <section class="section-service">
         <div class="container">
             <h1>Core SERVICES</h1>
             <div class="row">
@@ -79,6 +79,42 @@
                         Iaculis purus digni.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+
+    <section class="section-extertise">
+        <div class="container">
+            <h1>Other Expertise</h1>
+            <div class="row">
+                <div class="col">
+                    <img src="images/setup.jpg" alt="">
+                    <h2>Custom Setup</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="images/cloud.png" alt="">
+                    <h2>Cloud Control</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus.</p>
+                </div>
+                <div class="col">
+                    <img src="images/all stars.jpg" alt="">
+                    <h2>All Star Support Team</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus.</p>
+                </div>
+                <div class="col">
+                    <img src="images/security.jpg" alt="">
+                    <h2>Top Notch Security</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus.</p>
+                </div>
+            </div>
+            <button class="expertise-button">Learn More</button>
+            <!-- Не забывай закрывать дивы! -->
         </div>
     </section>
 
