--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -121,7 +121,8 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col">&copy; 2019</div>
+                <div class="col"><button class="footer-button">Send Message</button></div>
+                <div class="col">&copy; 2014 Dreams By FreebiesXpress</div>
             </div>
         </div>
     </footer>
