i try so hard but got so low

--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -83,7 +83,7 @@
     </section>
 
 
-    <section class="section-extertise">
+    <section class="section-expertise">
         <div class="container">
             <h1>Other Expertise</h1>
             <div class="row">
