i try so HARD and got so FAR

--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -112,6 +112,9 @@
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus.</p>
                 </div>
+                <div class="aside">
+                    <img src="images/aside.jpg" alt="">
+                </div>
             </div>
             <button class="expertise-button">Learn More</button>
             <!-- Не забывай закрывать дивы! -->
