--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -8,6 +8,7 @@
     <title>Шаблон</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Montserrat|Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
@@ -59,16 +60,14 @@
                     <h2>Beautiful Designs</h2>
                     <p> Proin iaculis purus consequat sem digni ssim.
                         Donec porttitora entum aenean rhoncus posuere odio in.
-                        Iaculis purus digni.
-                    </p>
+                        Iaculis purus digni.</p>
                 </div>
                 <div class="col quotes">
                     <img src="images/Kakashi.png" alt="">
                     <h2>Web Development</h2>
                     <p>Proin iaculis purus consequat sem digni ssim.
                         Donec porttitora entum aenean rhoncus posuere odio in.
-                        Iaculis purus digni.
-                    </p>
+                        Iaculis purus digni.</p>
                 </div>
 
                 <div class="col quotes">
@@ -87,34 +86,36 @@
         <div class="container">
             <h1>Other Expertise</h1>
             <div class="row">
-                <div class="col">
-                    <img src="images/setup.jpg" alt="">
+                <div class="col-md-6 info">
+                    <!-- <img src="images/setup.jpg" alt=""> -->
+                    <i class="fas fa-cog"></i>
                     <h2>Custom Setup</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus.
+                        <i class="fab fa-vk"></i>
                     </p>
                 </div>
-                <div class="col">
+                <div class="col-md-6 info">
                     <img src="images/cloud.png" alt="">
                     <h2>Cloud Control</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus.</p>
                 </div>
-                <div class="col">
+                <div class="col-md-6 info">
                     <img src="images/all stars.jpg" alt="">
                     <h2>All Star Support Team</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus.</p>
                 </div>
-                <div class="col">
+                <div class="col-md-6 info">
                     <img src="images/security.jpg" alt="">
                     <h2>Top Notch Security</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus.</p>
                 </div>
-                <div class="aside">
+                <!-- <div class="aside">
                     <img src="images/aside.jpg" alt="">
-                </div>
+                </div> -->
             </div>
             <button class="expertise-button">Learn More</button>
             <!-- Не забывай закрывать дивы! -->
