--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -122,6 +122,44 @@
         </div>
     </section>
 
+
+    <section class="section-expertise">
+        <div class="container">
+            <h1>Amazing PORTFOLIO</h1>
+            <p>Proin iaculis purus consequat sem cure digni ssim.
+                Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                Proin iaculis purus consequat sem cure digni ssim.
+                Donec porttitora entum suscipit.</p>
+
+                <p>iaculis purus consequat sem cure digni ssim.
+                    Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                    Proin iaculis purus consequat</p>
+
+            <div class="row">
+                <div class="col-md-7 info">
+                    <i class="fas fa-cog"></i>
+                    <h2>Sail away your worries</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncusposuere odio in tincidunt.</p>
+                </div>
+                <div class="col-md-7 info">
+                    <i class="fab fa-jedi-order"></i>
+                    <h2>All-star support team</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </div>
+                <div class="col-md-7 info">
+                    <i class="fab fa-servicestack"></i>
+                    <h2>Fully integrated service</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </div>
+            </div>
+            <button class="expertise-button">Learn More</button>
+            <!-- Не забывай закрывать дивы! -->
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
