--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -92,7 +92,6 @@
                     <h2>Custom Setup</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus.
-                        <i class="fab fa-vk"></i>
                     </p>
                 </div>
                 <div class="col-md-6 info">
@@ -123,7 +122,7 @@
     </section>
 
 
-    <section class="section-expertise">
+    <section class="section-portfolio">
         <div class="container">
             <h1>Amazing PORTFOLIO</h1>
             <p>Proin iaculis purus consequat sem cure digni ssim.
@@ -134,6 +133,7 @@
                 <p>iaculis purus consequat sem cure digni ssim.
                     Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                     Proin iaculis purus consequat</p>
+                    <i class="fas fa-user-friends"></i>
 
             <div class="row">
                 <div class="col-md-7 info">
@@ -155,8 +155,6 @@
                         Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
             </div>
-            <button class="expertise-button">Learn More</button>
-            <!-- Не забывай закрывать дивы! -->
         </div>
     </section>
 
