--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -130,12 +130,13 @@
                 Proin iaculis purus consequat sem cure digni ssim.
                 Donec porttitora entum suscipit.</p>
 
-                <p>iaculis purus consequat sem cure digni ssim.
+                <p>Iaculis purus consequat sem cure digni ssim.
                     Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                     Proin iaculis purus consequat</p>
-                    <i class="fas fa-user-friends"></i>
+                    
 
             <div class="row">
+                    <i class="fas fa-user-friends"></i>
                 <div class="col-md-7 info">
                     <i class="fas fa-cog"></i>
                     <h2>Sail away your worries</h2>
