--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -135,8 +135,8 @@
                     Proin iaculis purus consequat</p>
                     
 
-            <div class="row">
-                    <i class="fas fa-user-friends"></i>
+            <div class="row" style="position:relative;">
+                <div class="iconka"><i class="fas fa-user-friends"></i></div>
                 <div class="col-md-7 info">
                     <i class="fas fa-cog"></i>
                     <h2>Sail away your worries</h2>
