--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -136,7 +136,7 @@
                     
 
             <div class="row">
-                    <i class="fas fa-user-friends"></i>
+                <div class="bg-icon"><i class="fas fa-user-friends"></i></div>
                 <div class="col-md-7 info">
                     <i class="fas fa-cog"></i>
                     <h2>Sail away your worries</h2>
