--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -159,6 +159,28 @@
         </div>
     </section>
 
+
+        <div class="flex-pictures">
+                <div class="flex-cell">
+                    <img src="images/dk.png" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/amateo.jpg" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/dandelion.jpg" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/serj.jpg" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/honey.png" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/el.jpg" alt="">
+                </div>
+        </div>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
