--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -181,6 +181,51 @@
                 </div>
         </div>
 
+    <section class="section-about">
+        <div class="container">
+            <h1>About us</h1>
+            <div class="row">
+                <div class="col-7">
+                    <h2>July 2010</h2>
+                    <h2>Our humble beginnings</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                        Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit.</p>
+                    <img src="images/original.gif" alt="">
+                </div>
+                <div class="col-7">
+                    <h2>January 2011</h2>
+                    <h2>Facing startup battles</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                            Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                            Proin iaculis purus consequat sem cure digni.</p>
+                    <img src="images/original.gif" alt="">
+                </div>
+                <div class="col-7">
+                    <h2>December 2012</h2>
+                    <h2>Enter the dark days</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                            Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                            Proin iaculis purus consequat sem cure digni ssim.
+                            Donec porttitora entum suscipit.</p>
+                    <img src="images/original.gif" alt="">
+                </div>
+                <div class="col-7">
+                    <h2>February 2014</h2>
+                    <h2>Our triumph</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                                Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                                Proin iaculis purus consequat sem cure entum suscipit.</p>
+                    <img src="images/original.gif" alt="">
+                </div>
+    
+
+            </div>
+        </div>
+
+    </section>    
+
     <footer class="footer">
         <div class="container">
             <div class="row">
