--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -185,7 +185,7 @@
         <div class="container">
             <h1>About us</h1>
             <div class="row">
-                <div class="col-7">
+                <div class="col-md-7">
                     <h2>July 2010</h2>
                     <h2>Our humble beginnings</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
@@ -194,7 +194,7 @@
                         Donec porttitora entum suscipit.</p>
                     <img src="images/original.gif" alt="">
                 </div>
-                <div class="col-7">
+                <div class="col-md-7">
                     <h2>January 2011</h2>
                     <h2>Facing startup battles</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
@@ -202,7 +202,7 @@
                             Proin iaculis purus consequat sem cure digni.</p>
                     <img src="images/original.gif" alt="">
                 </div>
-                <div class="col-7">
+                <div class="col-md-7">
                     <h2>December 2012</h2>
                     <h2>Enter the dark days</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
@@ -211,7 +211,7 @@
                             Donec porttitora entum suscipit.</p>
                     <img src="images/original.gif" alt="">
                 </div>
-                <div class="col-7">
+                <div class="col-md-7">
                     <h2>February 2014</h2>
                     <h2>Our triumph</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
@@ -219,7 +219,8 @@
                                 Proin iaculis purus consequat sem cure entum suscipit.</p>
                     <img src="images/original.gif" alt="">
                 </div>
-    
+
+                <button class="about-button">Our story continues ...</button>
 
             </div>
         </div>
