--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -160,82 +160,72 @@
     </section>
 
 
-    <div class="flex-pictures">
-        <!-- <div class="flex-cell">
-            <img src="images/dk.png" alt="">
+        <div class="flex-pictures">
+                <div class="flex-cell">
+                    <img src="images/dk.png" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/amateo.jpg" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/dandelion.jpg" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/serj.jpg" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/honey.png" alt="">
+                </div>
+                <div class="flex-cell">
+                    <img src="images/el.jpg" alt="">
+                </div>
         </div>
-        <div class="flex-cell">
-            <img src="images/amateo.jpg" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="images/dandelion.jpg" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="images/serj.jpg" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="images/honey.png" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="images/el.jpg" alt="">
-        </div> -->
-        <div class="flex-cell">
-            <img src="https://via.placeholder.com/1000x300?text=Dima+Kitlyaev" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="https://via.placeholder.com/1000x300?text=is+padawan+of" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="https://via.placeholder.com/1000x300?text=Master+Sergius" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="https://via.placeholder.com/1000x300?text=JOIN+THE" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="https://via.placeholder.com/1000x300?text=DARK" alt="">
-        </div>
-        <div class="flex-cell">
-            <img src="https://via.placeholder.com/1000x300?text=SIDE" alt="">
-        </div>
-    </div>
 
     <section class="section-about">
         <div class="container">
             <h1>About us</h1>
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-5">
                     <h2>July 2010</h2>
                     <h2>Our humble beginnings</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                         Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit.</p>
+                </div>
+                <div class="col-md-2"></div>
                     <img src="images/original.gif" alt="">
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-5">
+                </div>
+                
+            <div class="row">
+                <div class="col-md-5">
+                </div>
+                <div class="col-md-2"></div>
+                    <img src="images/original.gif" alt="">
+                </div>
+                <div class="col-md-5">
                     <h2>January 2011</h2>
                     <h2>Facing startup battles</h2>
                     <p>Proin iaculis purus consequat sem cure digni ssim.
-                            Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-                            Proin iaculis purus consequat sem cure digni.</p>
+                        Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                        Proin iaculis purus consequat sem cure digni.</p>
+                </div>
+
+            <div class="row">
+                <div class="col-md-5">
+                    <h2>July 2010</h2>
+                    <h2>Our humble beginnings</h2>
+                    <p>Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                        Proin iaculis purus consequat sem cure digni ssim.
+                        Donec porttitora entum suscipit.</p>
+                </div>
+                <div class="col-md-2"></div>
                     <img src="images/original.gif" alt="">
                 </div>
-                <div class="col-md-7">
-                    <h2>December 2012</h2>
-                    <h2>Enter the dark days</h2>
-                    <p>Proin iaculis purus consequat sem cure digni ssim.
-                            Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-                            Proin iaculis purus consequat sem cure digni ssim.
-                            Donec porttitora entum suscipit.</p>
-                    <img src="images/original.gif" alt="">
-                </div>
-                <div class="col-md-7">
-                    <h2>February 2014</h2>
-                    <h2>Our triumph</h2>
-                    <p>Proin iaculis purus consequat sem cure digni ssim.
-                                Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-                                Proin iaculis purus consequat sem cure entum suscipit.</p>
-                    <img src="images/original.gif" alt="">
+                <div class="col-md-5">
                 </div>
 
                 <button class="about-button">Our story continues ...</button>
