--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -159,27 +159,44 @@
         </div>
     </section>
 
-
-        <div class="flex-pictures">
-                <div class="flex-cell">
-                    <img src="images/dk.png" alt="">
-                </div>
-                <div class="flex-cell">
-                    <img src="images/amateo.jpg" alt="">
-                </div>
-                <div class="flex-cell">
-                    <img src="images/dandelion.jpg" alt="">
-                </div>
-                <div class="flex-cell">
-                    <img src="images/serj.jpg" alt="">
-                </div>
-                <div class="flex-cell">
-                    <img src="images/honey.png" alt="">
-                </div>
-                <div class="flex-cell">
-                    <img src="images/el.jpg" alt="">
-                </div>
+    <div class="flex-pictures">
+        <!-- <div class="flex-cell">
+            <img src="images/dk.png" alt="">
         </div>
+        <div class="flex-cell">
+            <img src="images/amateo.jpg" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="images/dandelion.jpg" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="images/serj.jpg" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="images/honey.png" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="images/el.jpg" alt="">
+        </div> -->
+        <div class="flex-cell">
+            <img src="https://via.placeholder.com/1000x300?text=Dima+Kitlyaev" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="https://via.placeholder.com/1000x300?text=is+padawan+of" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="https://via.placeholder.com/1000x300?text=Master+Sergius" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="https://via.placeholder.com/1000x300?text=JOIN+THE" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="https://via.placeholder.com/1000x300?text=DARK" alt="">
+        </div>
+        <div class="flex-cell">
+            <img src="https://via.placeholder.com/1000x300?text=SIDE" alt="">
+        </div>
+    </div>
 
     <section class="section-about">
         <div class="container">
