--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -160,7 +160,7 @@
     </section>
 
     <div class="flex-pictures">
-        <!-- <div class="flex-cell">
+        <div class="flex-cell">
             <img src="images/dk.png" alt="">
         </div>
         <div class="flex-cell">
@@ -177,8 +177,8 @@
         </div>
         <div class="flex-cell">
             <img src="images/el.jpg" alt="">
-        </div> -->
-        <div class="flex-cell">
+        </div>
+        <!-- <div class="flex-cell">
             <img src="https://via.placeholder.com/1000x300?text=Dima+Kitlyaev" alt="">
         </div>
         <div class="flex-cell">
@@ -195,7 +195,7 @@
         </div>
         <div class="flex-cell">
             <img src="https://via.placeholder.com/1000x300?text=SIDE" alt="">
-        </div>
+        </div> -->
     </div>
 
     <section class="section-about">
@@ -210,16 +210,16 @@
                         Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit.</p>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2">
                     <img src="images/original.gif" alt="">
                 </div>
-                <div class="col-md-5">
-                </div>
+                <div class="col-md-5"></div>
+            </div>    
                 
             <div class="row">
                 <div class="col-md-5">
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2">
                     <img src="images/original.gif" alt="">
                 </div>
                 <div class="col-md-5">
@@ -229,6 +229,7 @@
                         Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                         Proin iaculis purus consequat sem cure digni.</p>
                 </div>
+            </div>
 
             <div class="row">
                 <div class="col-md-5">
@@ -239,17 +240,29 @@
                         Proin iaculis purus consequat sem cure digni ssim.
                         Donec porttitora entum suscipit.</p>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2">
                     <img src="images/original.gif" alt="">
                 </div>
                 <div class="col-md-5">
                 </div>
-
-                <button class="about-button">Our story continues ...</button>
-
             </div>
-        </div>
 
+            <div class="row">
+                    <div class="col-md-5">
+                    </div>
+                    <div class="col-md-2">
+                        <img src="images/original.gif" alt="">
+                    </div>
+                    <div class="col-md-5">
+                        <h2>January 2011</h2>
+                        <h2>Facing startup battles</h2>
+                        <p>Proin iaculis purus consequat sem cure digni ssim.
+                            Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+                            Proin iaculis purus consequat sem cure digni.</p>
+                    </div>
+                </div>
+                <button class="about-button">Our story continues ...</button>
+            </div>
     </section>    
 
     <footer class="footer">
