--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -265,6 +265,40 @@
             </div>
     </section>    
 
+    <section class="section-team">
+        <div class="container">
+            <h1>Awesome Team</h1>
+            <div class="row">
+                <div class="col">
+                    <img src="images/jimmy.jpg" alt="">
+                    <h2>Jimmy Letterman</h2>
+                    <p>Marketer</p>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                </div>
+                <div class="col">
+                    <img src="images/rico.jpg" alt="">
+                    <h2>Rico Massimo</h2>
+                    <p>Coder</p>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                </div>
+                <div class="col">
+                    <img src="images/lisa.jpg" alt="">
+                    <h2>Lisa Mason</h2>
+                    <p>Graphic Designer</p>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                </div>
+            </div>
+        </div>
+        <p>Proin iaculis purus consequat sem cure digni ssim.
+            Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
+            Proin iaculis</p>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
