--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -302,6 +302,19 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
+                <div class="col-6">
+                    <h2>CONTACT US</h2>
+                    <p>Don't be shy, drop us an email and say hello! We are a really
+                        nice bunch of people :)
+                    </p>
+                </div>
+                <div class="col-6">
+                    <input type="text" name="name" placeholder="Your Name*">
+                    <input type="email" name="email-adress" placeholder="Your E-mail*"> 
+                </div>
+
+            </div>
+            <div class="row">
                 <div class="col"><button class="footer-button">Send Message</button></div>
                 <div class="col">&copy; 2014 Dreams By FreebiesXpress</div>
             </div>
