until finish-line

--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -315,9 +315,35 @@
 
             </div>
             <div class="row">
-                <div class="col"><button class="footer-button">Send Message</button></div>
-                <div class="col">&copy; 2014 Dreams By FreebiesXpress</div>
+                <div class="col-md-3">
+                    <i class="fas fa-mobile-alt"></i>
+                    <p>(416) 555-0000</p>
+                    <i class="fab fa-twitter"></i>
+                    <p>@dreams</p>
+                    <i class="fab fa-google-plus-g"></i>
+                    <p>plus.com/dreams</p>
+                </div>
+                <div class="col-md-3">
+                    <i class="fas fa-envelope"></i>
+                    <p>hello@dreams.com</p>
+                    <i class="fab fa-facebook-f"></i>
+                    <p>facebook.com/dreams</p>
+                    <i class="fab fa-pinterest-p"></i>
+                    <p>pinterest.com/dreams</p>
+                </div>
+                <div class="col-md-6">
+                    <input type="text" name="message" placeholder="Your Message*">
+                </div>
             </div>
+
+            <div class="row">
+                <div class="col"><button class="footer-button">Send Message</button></div>
+            </div>
+
+            <div class="row">
+                    <div class="col">&copy; 2014 Dreams By FreebiesXpress</div>
+            </div>
+
         </div>
     </footer>
 
