--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -300,15 +300,20 @@
             <div class="row">
                 <div class="col-6">
                     <h2>CONTACT US</h2>
+                </div>
+                <div class="col-6">
+                    <input type="text" name="name" placeholder="Your Name*">  
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
                     <p>Don't be shy, drop us an email and say hello! We are a really
                         nice bunch of people :)
                     </p>
                 </div>
                 <div class="col-6">
-                    <input type="text" name="name" placeholder="Your Name*">
                     <input type="email" name="email-adress" placeholder="Your E-mail*"> 
                 </div>
-
             </div>
             <div class="row">
                 <div class="col-md-3">
@@ -337,7 +342,7 @@
             </div>
 
             <div class="row">
-                    <div class="col">&copy; 2014 Dreams By FreebiesXpress</div>
+                    <div class="col-12">&copy; 2014 Dreams By FreebiesXpress</div>
             </div>
 
         </div>
