--- a/SecondTemplate/index.html
+++ b/SecondTemplate/index.html
@@ -207,7 +207,7 @@
                         Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="images/original.gif" alt="">
+                    <img src="images/01.jpg" alt="">
                 </div>
                 <div class="col-md-5"></div>
             </div>    
@@ -216,7 +216,7 @@
                 <div class="col-md-5">
                 </div>
                 <div class="col-md-2">
-                    <img src="images/original.gif" alt="">
+                    <img src="images/02.jpg" alt="">
                 </div>
                 <div class="col-md-5">
                     <h2>January 2011</h2>
@@ -237,7 +237,7 @@
                         Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="images/original.gif" alt="">
+                    <img src="images/03.jpg" alt="">
                 </div>
                 <div class="col-md-5">
                 </div>
@@ -247,7 +247,7 @@
                 <div class="col-md-5">
                 </div>
                 <div class="col-md-2">
-                    <img src="images/original.gif" alt="">
+                    <img src="images/04.jpg" alt="">
                 </div>
                 <div class="col-md-5">
                     <h2>January 2011</h2>
