--- a/MediaProject/index.html
+++ b/MediaProject/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Шаблон</title>
+    <title>Media Project</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
@@ -15,8 +15,15 @@
 </head>
 
 <body>
-
-    <h1 class="text-center">Hello</h1>
+    <header class="header section">
+        <nav class="header-navbar">
+            <div class="container">
+                <div class="logo">
+                    <a href="/"><img src=images/media.png alt="logo"></a>  
+                </div>
+            </div>
+        </nav>
+    </header>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
