--- a/MediaProject/index.html
+++ b/MediaProject/index.html
@@ -21,8 +21,17 @@
                 <div class="logo">
                     <a href="/"><img src=images/media.png alt="logo"></a>  
                 </div>
+                <ul class="nav">
+                    <li><a href="#header" class="active">Главная</a></li>
+                    <li><a href="#video">Видео</a></li>
+                    <li><a href="#picture">Изображения</a></li>
+                    <li><a href="#audio">Аудио</a></li>
+                </ul>  
             </div>
         </nav>
+        <video autoplay loop muted src="images/header-top.mp4" type="video/webm">
+            
+        </video>
     </header>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
