--- a/MediaProject/index.html
+++ b/MediaProject/index.html
@@ -33,6 +33,13 @@
             
         </video>
     </header>
+    <section class="imageses" id="imageses">
+        <div class="container">
+            <h1>Image</h1>
+            <img src="images/think.jpg" alt="think">
+        </div>
+
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
