--- a/MediaProject/index.html
+++ b/MediaProject/index.html
@@ -36,7 +36,10 @@
     <section class="imageses" id="imageses">
         <div class="container">
             <h1>Image</h1>
-            <img src="images/think.jpg" alt="think">
+            <div class="click">
+                <div><img src="images/think.jpg" alt="think"></div>
+                <div><img src="images/ddju.ju.d.01.jpg" alt="korean"></div>
+            </div>
         </div>
 
     </section>
