--- a/cuba/index.html
+++ b/cuba/index.html
@@ -16,10 +16,38 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header-logo">
+            <div class="container-nav">
+                <nav class="navbar header-navbar">
+                    <a class="navbar-brand" href="#">Cuba</a>
+                        <ul class="nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">HOME</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">ABOUT</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">WORK</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">BLOG</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">CONTACT</a>
+                            </li>
+                        </ul>
+                </nav>
+            </div>
 
-
-
-    <h1 class="text-center">Hello</h1>
+            <div class="container-logo">
+                <h1>Hi there! We are the new kids on the block</h1>
+                <h1>and we build awesome websites and mobile apps.</h1>
+            </div>
+            <button class="logo-button">WORK WITH US!</button>
+        </div>
+    </header>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
