--- a/cuba/index.html
+++ b/cuba/index.html
@@ -23,7 +23,7 @@
                     <a class="navbar-brand" href="#">Cuba</a>
                         <ul class="nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">HOME</a>
+                                <a class="nav-link active" href="#">HOME</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">ABOUT</a>
