--- a/cuba/index.html
+++ b/cuba/index.html
@@ -22,19 +22,19 @@
                 <nav class="navbar header-navbar">
                     <a class="navbar-brand" href="#">Cuba</a>
                         <ul class="nav ml-auto">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link active" href="#">HOME</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">ABOUT</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">WORK</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">BLOG</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#">CONTACT</a>
                             </li>
                         </ul>
@@ -48,6 +48,15 @@
             <button class="logo-button">WORK WITH US!</button>
         </div>
     </header>
+
+    <section class="section-service">
+        <div class="container">
+            <h1>SERVICES WE PROVIDE</h1>
+            <p> We are working with both individuals and businesses from all over the globe</p>
+            <p>to create awesome websites and applications</p>
+        </div>
+
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
