--- a/cuba/index.html
+++ b/cuba/index.html
@@ -53,8 +53,44 @@
         <div class="container">
             <h1>SERVICES WE PROVIDE</h1>
             <p> We are working with both individuals and businesses from all over the globe</p>
-            <p>to create awesome websites and applications</p>
+            <p>to create awesome websites and applications.</p>
+
+            <div class="row">
+                <div class="col-3 info">
+                    <img src="images/services-1.png" alt="">
+                    <h2>BRANDING</h2>
+                    <p>Lorem ipsum dolor sit amet,</p>
+                    <p> consectetuer adipiscing elit,</p>
+                    <p> sed diam nonummy nibh.</p>
+                </div>
+                <div class="col-3 info">
+                    <img src="images/services-2.png" alt="">
+                    <h2>DESIGN</h2>
+                    <p>Sed ut perspiciatis unde</p>
+                    <p>omnis iste natus error sit</p>
+                    <p>voluptatem.</p>
+                </div>
+                <div class="col-3 info">
+                    <img src="images/services-3.png" alt="">
+                    <h2>DEVELOPMENT</h2>
+                    <p>At vero eos et accusamus el</p>
+                    <p>iusto odio dignissimos qui</p>
+                    <p>blanditiis praesentium.</p>
+                </div>
+                <div class="col-3 info">
+                    <img src="images/services-4.png" alt="">
+                    <h2>ROCKET SCIENCE</h2>
+                    <p>Et harum quidem rerum est</p>
+                    <p>et expedita distincio. Nam</p>
+                    <p>libero tempore.</p>
+                </div>
+            </div>
         </div>
+
+    </section>
+    <section class="section-team">
+        <h1>MEET OUR BEAUTIFUL TEAM</h1>
+        <p>We are small team of designers and developers, who help brands with big ideas.</p>
 
     </section>
 
